--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 <script>
   (() => {
-    emailjs.init("service_pm1p5tr");
+    emailjs.init("PA7qGrJKXL9PpzVzI");
   })();
 </script>
 </head>
