--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
 <span>Descuento aplicado: <strong id="descuento">-$0</strong></span>
 <span>Total final: <strong id="total-final">$0</strong></span>
 <div id="mensaje-desc" style="margin-top:10px; color:green;"></div>
-<button id="abrir-modal">Generar presupuesto</button>
+<button id="abrir-modal" onclick="generarPresupuesto(); enviarPresupuestoPorEmail();">Generar presupuesto</button>
 </div>
 <script>const tabs = document.querySelectorAll('.tab'); const contents = document.querySelectorAll('.tab-content'); tabs.forEach((tab, i) => { tab.addEventListener('click', () => { tabs.forEach(t => t.classList.remove('active')); contents.forEach(c => c.classList.remove('active')); tab.classList.add('active'); contents[i].classList.add('active'); }); }); tabs[0].click();</script>
 <script>
