--- a/index.html
+++ b/index.html
@@ -568,12 +568,34 @@ const filasHtml = productosSeleccionados.map(p =>
 ).join("");
 
 const mensaje_html = `
-  <table border="1" cellpadding="6" cellspacing="0" style="border-collapse:collapse;">
-    <thead><tr><th>Producto</th><th>Cantidad</th><th>Precio Unit.</th><th>Subtotal</th></tr></thead>
-    <tbody>${filasHtml}</tbody>
+  <h2 style="color:#007bff;">PRESUPUESTO BARRETODO</h2>
+  <p><strong>Fecha:</strong> ${new Date().toLocaleDateString()}</p>
+
+  <table border="1" cellpadding="6" cellspacing="0" style="border-collapse:collapse; width:100%;">
+    <thead>
+      <tr>
+        <th>Producto</th>
+        <th>Cantidad</th>
+        <th>Precio Unit.</th>
+        <th>Subtotal</th>
+      </tr>
+    </thead>
+    <tbody>
+      ${filasHtml}
+    </tbody>
   </table>
-  <p><strong>Total:</strong> $${totalFinal.toLocaleString()}</p>
-`;
+
+  <p><strong>Total sin descuento:</strong> $${totalSinDescuento.toLocaleString()}</p>
+  <p><strong>Descuento aplicado:</strong> ${descuento * 100}% (-$${(totalSinDescuento * descuento).toLocaleString()})</p>
+  <p><strong>Total final:</strong> $${totalFinal.toLocaleString()}</p>
+
+  <h3 style="margin-top:30px;">Información de contacto del cliente</h3>
+  <p><strong>Nombre:</strong> ${nombre}</p>
+  <p><strong>Teléfono:</strong> ${telefono}</p>
+  <p><strong>Email:</strong> ${email}</p>
+  <p><strong>Dirección:</strong> ${direccion}</p>
+  ${nota ? `<p><strong>Nota:</strong> ${nota}</p>` : ""}
+`;;
 
 const templateParams = {
   nombre,
@@ -600,4 +622,3 @@ emailjs.send("service_pm1p5tr", "template_lyjye95", templateParams)
 
 });
 </script>
-
