--- a/index.html
+++ b/index.html
@@ -31,6 +31,17 @@
       font-weight: bold;
       text-align: center;
     }
+       .mensaje-guia {
+      background: #fff3cd;
+      border: 1px solid #c3e6cb;
+      color: #155724;
+      padding: 10px 20px;
+      margin: 15px auto 25px;
+      max-width: 700px;
+      border-radius: 8px;
+      font-weight: bold;
+      text-align: center;
+    }
     .tabs { display: flex; flex-wrap: wrap; justify-content: center; gap: 10px; margin-bottom: 20px; }
     .tab {
       padding: 10px 15px;
@@ -83,6 +94,11 @@
 <div class="mensaje-descuento">
   5% de descuento en compras mayores a $200.000 (SURTIDAS)<br/>
   10% de descuento en compras mayores a $300.000 (SURTIDAS)
+</div>
+   <div class="mensaje-guia">
+  Filtrar entre categorias buscando productos y cantidades<br/>
+  Generar presupuesto, completar datos y te llegará por mail<br/>
+   Nos pondremos en contacto a la brevedad
 </div>
 <div class="tabs">
 
