--- a/web/index.html
+++ b/web/index.html
@@ -148,6 +148,12 @@
       <img src="assets/img/brand4.png" class="brand-logo" alt="Marca 4" loading="lazy">
       <img src="assets/img/brand5.png" class="brand-logo" alt="Marca 5" loading="lazy">
       <img src="assets/img/brand6.png" class="brand-logo" alt="Marca 6" loading="lazy">
+	  <img src="assets/img/brand7.png" class="brand-logo" alt="Marca 7" loading="lazy">
+	  <img src="assets/img/brand8.png" class="brand-logo" alt="Marca 8" loading="lazy">
+	  <img src="assets/img/brand9.png" class="brand-logo" alt="Marca 9" loading="lazy">
+	  <img src="assets/img/brand10.png" class="brand-logo" alt="Marca 10" loading="lazy">
+	  <img src="assets/img/brand11.png" class="brand-logo" alt="Marca 11" loading="lazy">
+	  <img src="assets/img/brand12.png" class="brand-logo" alt="Marca 12" loading="lazy">
     </div>
   </div>
 </section>
