--- a/web/index.html
+++ b/web/index.html
@@ -307,37 +307,73 @@
 
 <footer class="site-footer">
   <div class="container footer-grid">
-    <div class="footer-brand">
-      <img src="assets/img/logo.png" alt="Logo Barretodo" class="logo-sm">
-      <p>Distribuidora mayorista y minorista de productos de limpieza en CABA. Te ayudamos a elegir lo más rendidor.</p>
-    </div>
-    <div>
-      <h4>Datos</h4>
-      <ul class="list-plain">
-        <li>Av. Hipólito Yrigoyen 3386, Almagro, CABA</li>
-        <li><a href="https://wa.me/541151022954" target="_blank" rel="noopener">+54 11 5102-2954</a></li>
-        <li><a href="mailto:contacto@barretodo.com.ar">contacto@barretodo.com.ar</a></li>
-      </ul>
-    </div>
-    <div>
-      <h4>Accesos</h4>
-      <ul class="list-plain">
-        <li><a href="pages/productos.html">Productos</a></li>
-        <li><a href="catalogo/index.html">Catálogo</a></li>
-        <li><a href="pages/contacto.html">Contacto</a></li>
-      </ul>
-    </div>
-    <div>
-      <h4>Redes</h4>
-      <p>
-        <a href="https://instagram.com/barre.todo" target="_blank" rel="noopener" aria-label="Instagram">Instagram</a> ·
-        <a href="https://wa.me/541151022954" target="_blank" rel="noopener" aria-label="WhatsApp">WhatsApp</a> ·
-        <span aria-label="Facebook">Facebook</span>
+    <div class="footer-col footer-brand">
+      <img src="assets/logo.svg" alt="Barretodo" class="footer-logo" width="40" height="40" />
+      <p class="footer-text">
+        Distribuidora mayorista y minorista de productos de limpieza en CABA.
+        Te ayudamos a elegir lo más rendidor.
       </p>
     </div>
+
+    <div class="footer-col">
+      <h4 class="footer-title">Datos</h4>
+      <ul class="footer-list">
+        <li>
+          <span class="ico">
+            <!-- pin -->
+            <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M12 2a7 7 0 0 0-7 7c0 5.25 7 13 7 13s7-7.75 7-13a7 7 0 0 0-7-7Zm0 9.5A2.5 2.5 0 1 1 12 6a2.5 2.5 0 0 1 0 5.5Z"/></svg>
+          </span>
+          Av. Hipólito Yrigoyen 3386, Almagro, CABA
+        </li>
+        <li>
+          <span class="ico">
+            <!-- phone -->
+            <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M6.6 10.8a15.4 15.4 0 0 0 6.6 6.6l2.2-2.2a1 1 0 0 1 1.1-.24 11.6 11.6 0 0 0 3.6.58 1 1 0 0 1 1 1v3.44a1 1 0 0 1-1 1A18.9 18.9 0 0 1 3 5a1 1 0 0 1 1-1h3.44a1 1 0 0 1 1 1 11.6 11.6 0 0 0 .58 3.6 1 1 0 0 1-.24 1.1Z"/></svg>
+          </span>
+          <a href="tel:+541151022954">+54 11 5102-2954</a>
+        </li>
+        <li>
+          <span class="ico">
+            <!-- mail -->
+            <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M2 6a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2Zm2 .5v.3l8 5 8-5v-.3Zm16 3.2-7.51 4.7a2 2 0 0 1-1.98 0L3 9.7V18h17Z"/></svg>
+          </span>
+          <a href="mailto:contacto@barretodo.com.ar">contacto@barretodo.com.ar</a>
+        </li>
+      </ul>
+    </div>
+
+    <div class="footer-col">
+      <h4 class="footer-title">Accesos</h4>
+      <ul class="footer-list">
+        <li><a href="/productos">Productos</a></li>
+        <li><a href="/catalogo">Catálogo</a></li>
+        <li><a href="/contacto">Contacto</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-col">
+      <h4 class="footer-title">Redes</h4>
+      <div class="footer-social">
+        <a aria-label="Instagram" href="https://instagram.com/">
+          <svg viewBox="0 0 24 24"><path d="M12 2.2c3.2 0 3.6 0 4.9.07 1.2.06 1.9.25 2.4.42.6.24 1 .53 1.5.97.43.42.73.89.97 1.5.17.5.36 1.2.42 2.4.07 1.3.07 1.7.07 4.9s0 3.6-.07 4.9c-.06 1.2-.25 1.9-.42 2.4-.24.6-.53 1-.97 1.5-.42.43-.89.73-1.5.97-.5.17-1.2.36-2.4.42-1.3.07-1.7.07-4.9.07s-3.6 0-4.9-.07c-1.2-.06-1.9-.25-2.4-.42-.6-.24-1-.53-1.5-.97-.43-.42-.73-.89-.97-1.5-.17-.5-.36-1.2-.42-2.4C2.2 15.6 2.2 15.2 2.2 12s0-3.6.07-4.9c.06-1.2.25-1.9.42-2.4.24-.6.53-1 .97-1.5.42-.43.89-.73 1.5-.97.5-.17 1.2-.36 2.4-.42C8.4 2.2 8.8 2.2 12 2.2Zm0 2c-3.1 0-3.5 0-4.7.06-1 .05-1.6.22-2 .37-.5.2-.8.43-1.2.82-.39.38-.62.68-.82 1.2-.15.4-.32 1-.37 2C2.2 11 2.2 11.4 2.2 14.5s0 3.5.06 4.7c.05 1 .22 1.6.37 2 .2.5.43.8.82 1.2.38.39.68.62 1.2.82.4.15 1 .32 2 .37 1.2.06 1.6.06 4.7.06s3.5 0 4.7-.06c1-.05 1.6-.22 2-.37.5-.2.8-.43 1.2-.82.39-.38.62-.68.82-1.2.15-.4.32-1 .37-2 .06-1.2.06-1.6.06-4.7s0-3.5-.06-4.7c-.05-1-.22-1.6-.37-2-.2-.5-.43-.8-.82-1.2a3.4 3.4 0 0 0-1.2-.82c-.4-.15-1-.32-2-.37-1.2-.06-1.6-.06-4.7-.06Zm0 3.2a6.6 6.6 0 1 1 0 13.2 6.6 6.6 0 0 1 0-13.2Zm0 2a4.6 4.6 0 1 0 0 9.2 4.6 4.6 0 0 0 0-9.2Zm5-2.7a1.3 1.3 0 1 1-2.6 0 1.3 1.3 0 0 1 2.6 0Z"/></svg>
+        </a>
+        <a aria-label="WhatsApp" href="https://wa.me/541151022954">
+          <svg viewBox="0 0 24 24"><path d="M20.5 3.5A10 10 0 0 0 3.6 20l-1.1 4 4.1-1.1a10 10 0 0 0 13.8-13.9ZM12 20.1a8.1 8.1 0 0 1-4.1-1.1l-.3-.1-2.4.6.6-2.4-.1-.3a8.1 8.1 0 1 1 6.3 3.3Zm4.7-5.9c-.3-.2-1.7-.9-2-.9s-.5 0-.7.3-.8 1-.9 1.1-.3.2-.6.1a6.7 6.7 0 0 1-2-1.3 7.3 7.3 0 0 1-1.3-1.9c-.1-.3 0-.4.1-.6l.3-.4c.2-.2.3-.3.4-.5l.2-.3c.1-.2 0-.4 0-.5l-.7-1.8c-.2-.5-.4-.4-.6-.4h-.5c-.2 0-.5.1-.7.3s-1 1-1 2.4 1 2.7 1.1 2.9a9.6 9.6 0 0 0 3.5 3.3c.5.2 1.1.4 1.8.6.8.2 1.4.2 1.9.1.6-.1 1.7-.7 1.9-1.3.3-.6.3-1.2.2-1.3Z"/></svg>
+        </a>
+        <a aria-label="Facebook" href="https://facebook.com/">
+          <svg viewBox="0 0 24 24"><path d="M13 22v-9h3l.5-4H13V7.2c0-1.2.4-2 2.1-2H17V1.5c-.4 0-1.3-.1-2.3-.1-2.5 0-4.2 1.5-4.2 4.4V9H7v4h3v9Z"/></svg>
+        </a>
+      </div>
+    </div>
   </div>
-  <div class="copyright">© <span id="year"></span> Barretodo. Todos los derechos reservados.</div>
+
+  <div class="footer-bottom">
+    <div class="container">
+      © 2025 Barretodo. Todos los derechos reservados.
+    </div>
+  </div>
 </footer>
+
 
 <a class="whatsapp-fab" href="https://wa.me/541151022954?text=Hola%20Barretodo%2C%20quiero%20un%20presupuesto" target="_blank" rel="noopener" aria-label="Comunicate con nosotros">
   <img src="assets/img/whatsapp.png" alt="WhatsApp">
