--- a/web/index.html
+++ b/web/index.html
@@ -308,7 +308,7 @@
 <footer class="site-footer">
   <div class="container footer-grid">
     <div class="footer-col footer-brand">
-      <img src="assets/logo.svg" alt="Barretodo" class="footer-logo" width="40" height="40" />
+      <img src="assets/img/logo.png" alt="Barretodo" class="footer-logo" width="60" height="60" />
       <p class="footer-text">
         Distribuidora mayorista y minorista de productos de limpieza en CABA.
         Te ayudamos a elegir lo más rendidor.
@@ -354,16 +354,23 @@
     <div class="footer-col">
       <h4 class="footer-title">Redes</h4>
       <div class="footer-social">
-        <a aria-label="Instagram" href="https://instagram.com/">
-          <svg viewBox="0 0 24 24"><path d="M12 2.2c3.2 0 3.6 0 4.9.07 1.2.06 1.9.25 2.4.42.6.24 1 .53 1.5.97.43.42.73.89.97 1.5.17.5.36 1.2.42 2.4.07 1.3.07 1.7.07 4.9s0 3.6-.07 4.9c-.06 1.2-.25 1.9-.42 2.4-.24.6-.53 1-.97 1.5-.42.43-.89.73-1.5.97-.5.17-1.2.36-2.4.42-1.3.07-1.7.07-4.9.07s-3.6 0-4.9-.07c-1.2-.06-1.9-.25-2.4-.42-.6-.24-1-.53-1.5-.97-.43-.42-.73-.89-.97-1.5-.17-.5-.36-1.2-.42-2.4C2.2 15.6 2.2 15.2 2.2 12s0-3.6.07-4.9c.06-1.2.25-1.9.42-2.4.24-.6.53-1 .97-1.5.42-.43.89-.73 1.5-.97.5-.17 1.2-.36 2.4-.42C8.4 2.2 8.8 2.2 12 2.2Zm0 2c-3.1 0-3.5 0-4.7.06-1 .05-1.6.22-2 .37-.5.2-.8.43-1.2.82-.39.38-.62.68-.82 1.2-.15.4-.32 1-.37 2C2.2 11 2.2 11.4 2.2 14.5s0 3.5.06 4.7c.05 1 .22 1.6.37 2 .2.5.43.8.82 1.2.38.39.68.62 1.2.82.4.15 1 .32 2 .37 1.2.06 1.6.06 4.7.06s3.5 0 4.7-.06c1-.05 1.6-.22 2-.37.5-.2.8-.43 1.2-.82.39-.38.62-.68.82-1.2.15-.4.32-1 .37-2 .06-1.2.06-1.6.06-4.7s0-3.5-.06-4.7c-.05-1-.22-1.6-.37-2-.2-.5-.43-.8-.82-1.2a3.4 3.4 0 0 0-1.2-.82c-.4-.15-1-.32-2-.37-1.2-.06-1.6-.06-4.7-.06Zm0 3.2a6.6 6.6 0 1 1 0 13.2 6.6 6.6 0 0 1 0-13.2Zm0 2a4.6 4.6 0 1 0 0 9.2 4.6 4.6 0 0 0 0-9.2Zm5-2.7a1.3 1.3 0 1 1-2.6 0 1.3 1.3 0 0 1 2.6 0Z"/></svg>
-        </a>
-        <a aria-label="WhatsApp" href="https://wa.me/541151022954">
-          <svg viewBox="0 0 24 24"><path d="M20.5 3.5A10 10 0 0 0 3.6 20l-1.1 4 4.1-1.1a10 10 0 0 0 13.8-13.9ZM12 20.1a8.1 8.1 0 0 1-4.1-1.1l-.3-.1-2.4.6.6-2.4-.1-.3a8.1 8.1 0 1 1 6.3 3.3Zm4.7-5.9c-.3-.2-1.7-.9-2-.9s-.5 0-.7.3-.8 1-.9 1.1-.3.2-.6.1a6.7 6.7 0 0 1-2-1.3 7.3 7.3 0 0 1-1.3-1.9c-.1-.3 0-.4.1-.6l.3-.4c.2-.2.3-.3.4-.5l.2-.3c.1-.2 0-.4 0-.5l-.7-1.8c-.2-.5-.4-.4-.6-.4h-.5c-.2 0-.5.1-.7.3s-1 1-1 2.4 1 2.7 1.1 2.9a9.6 9.6 0 0 0 3.5 3.3c.5.2 1.1.4 1.8.6.8.2 1.4.2 1.9.1.6-.1 1.7-.7 1.9-1.3.3-.6.3-1.2.2-1.3Z"/></svg>
-        </a>
-        <a aria-label="Facebook" href="https://facebook.com/">
-          <svg viewBox="0 0 24 24"><path d="M13 22v-9h3l.5-4H13V7.2c0-1.2.4-2 2.1-2H17V1.5c-.4 0-1.3-.1-2.3-.1-2.5 0-4.2 1.5-4.2 4.4V9H7v4h3v9Z"/></svg>
-        </a>
-      </div>
+  <a aria-label="Instagram" href="https://instagram.com/">
+    <svg viewBox="0 0 24 24" aria-hidden="true">
+      <path d="M7 2h10a5 5 0 0 1 5 5v10a5 5 0 0 1-5 5H7a5 5 0 0 1-5-5V7a5 5 0 0 1 5-5Zm5 5a5 5 0 1 0 0 10 5 5 0 0 0 0-10Zm6.5-.9a1.1 1.1 0 1 0 0 2.2 1.1 1.1 0 0 0 0-2.2Z"/>
+    </svg>
+  </a>
+  <a aria-label="WhatsApp" href="https://wa.me/541151022954">
+    <svg viewBox="0 0 24 24" aria-hidden="true">
+      <path d="M20.5 3.5A10 10 0 0 0 3.6 20l-1.1 4 4.1-1.1a10 10 0 0 0 13.8-13.9Zm-8.5 15.6a8.1 8.1 0 0 1-4.1-1.1l-.3-.1-2.4.6.6-2.4-.1-.3a8.1 8.1 0 1 1 6.3 3.3Zm4.7-5.9c-.3-.2-1.7-.9-2-.9s-.5 0-.7.3-.8 1-.9 1.1-.3.2-.6.1a6.7 6.7 0 0 1-2-1.3 7.3 7.3 0 0 1-1.3-1.9c-.1-.3 0-.4.1-.6l.3-.4.4-.5.2-.3c.1-.2 0-.4 0-.5l-.7-1.8c-.2-.5-.4-.4-.6-.4h-.5c-.2 0-.5.1-.7.3s-1 1-1 2.4 1 2.7 1.1 2.9a9.6 9.6 0 0 0 3.5 3.3c.5.2 1.1.4 1.8.6.8.2 1.4.2 1.9.1.6-.1 1.7-.7 1.9-1.3.3-.6.3-1.2.2-1.3Z"/>
+    </svg>
+  </a>
+  <a aria-label="Facebook" href="https://facebook.com/">
+    <svg viewBox="0 0 24 24" aria-hidden="true">
+      <path d="M13 22v-9h3l.5-4H13V7.2c0-1.2.4-2 2.1-2H17V1.5c-1-.1-2.3-.1-3.3-.1-2.5 0-4.2 1.5-4.2 4.4V9H7v4h3v9Z"/>
+    </svg>
+  </a>
+</div>
+
     </div>
   </div>
 
