--- a/web/index.html
+++ b/web/index.html
@@ -306,78 +306,60 @@
 </main>
 
 <footer class="site-footer">
-  <div class="container footer-grid">
-    <div class="footer-col footer-brand">
-      <img src="assets/img/logo.png" alt="Barretodo" class="footer-logo" width="60" height="60" />
-      <p class="footer-text">
-        Distribuidora mayorista y minorista de productos de limpieza en CABA.
-        Te ayudamos a elegir lo más rendidor.
-      </p>
+  <div class="container">
+
+    <div class="footer-main">
+      <!-- Col 1: Logo -->
+      <div class="f-col f-brand">
+        <img src="assets/img/logo.png" alt="Barretodo" class="f-logo">
+      </div>
+
+      <span class="f-divider" aria-hidden="true"></span>
+
+      <!-- Col 2: Contacto -->
+      <div class="f-col f-contact">
+        <h3 class="f-title">Contacto</h3>
+        <ul class="f-list">
+          <li>📍 Av. Hipólito Yrigoyen 3386, Almagro, CABA</li>
+          <li>📞 +54 11 5102-2954</li>
+          <li>✉️ contacto@barretodo.com.ar</li>
+        </ul>
+      </div>
+
+      <span class="f-divider" aria-hidden="true"></span>
+
+      <!-- Col 3: Redes -->
+      <div class="f-col f-social">
+        <h3 class="f-title">Seguinos</h3>
+        <div class="f-social-row">
+          <a href="https://instagram.com/" target="_blank" class="f-btn">📷</a>
+          <a href="https://wa.me/541151022954" target="_blank" class="f-btn">💬</a>
+          <a href="https://facebook.com/" target="_blank" class="f-btn">👍</a>
+        </div>
+      </div>
+
+      <span class="f-divider" aria-hidden="true"></span>
+
+      <!-- Col 4: Newsletter -->
+      <div class="f-col f-news">
+        <h3 class="f-title">Suscribite</h3>
+        <form class="f-news-form" action="#" method="post">
+          <input type="email" class="f-input" placeholder="Tu email">
+          <button class="f-submit" type="submit">Suscribirme</button>
+        </form>
+      </div>
     </div>
 
-    <div class="footer-col">
-      <h4 class="footer-title">Datos</h4>
-      <ul class="footer-list">
-        <li>
-          <span class="ico">
-            <!-- pin -->
-            <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M12 2a7 7 0 0 0-7 7c0 5.25 7 13 7 13s7-7.75 7-13a7 7 0 0 0-7-7Zm0 9.5A2.5 2.5 0 1 1 12 6a2.5 2.5 0 0 1 0 5.5Z"/></svg>
-          </span>
-          Av. Hipólito Yrigoyen 3386, Almagro, CABA
-        </li>
-        <li>
-          <span class="ico">
-            <!-- phone -->
-            <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M6.6 10.8a15.4 15.4 0 0 0 6.6 6.6l2.2-2.2a1 1 0 0 1 1.1-.24 11.6 11.6 0 0 0 3.6.58 1 1 0 0 1 1 1v3.44a1 1 0 0 1-1 1A18.9 18.9 0 0 1 3 5a1 1 0 0 1 1-1h3.44a1 1 0 0 1 1 1 11.6 11.6 0 0 0 .58 3.6 1 1 0 0 1-.24 1.1Z"/></svg>
-          </span>
-          <a href="tel:+541151022954">+54 11 5102-2954</a>
-        </li>
-        <li>
-          <span class="ico">
-            <!-- mail -->
-            <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M2 6a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2Zm2 .5v.3l8 5 8-5v-.3Zm16 3.2-7.51 4.7a2 2 0 0 1-1.98 0L3 9.7V18h17Z"/></svg>
-          </span>
-          <a href="mailto:contacto@barretodo.com.ar">contacto@barretodo.com.ar</a>
-        </li>
-      </ul>
+    <!-- Barra inferior -->
+    <div class="footer-bottom">
+      <nav class="f-links">
+        <a href="/productos.html">Productos</a>
+        <a href="/catalogo.html">Catálogo</a>
+        <a href="/contacto.html">Contacto</a>
+      </nav>
+      <div class="f-copy">© 2025 Barretodo. Todos los derechos reservados.</div>
     </div>
 
-    <div class="footer-col">
-      <h4 class="footer-title">Accesos</h4>
-      <ul class="footer-list">
-        <li><a href="/productos">Productos</a></li>
-        <li><a href="/catalogo">Catálogo</a></li>
-        <li><a href="/contacto">Contacto</a></li>
-      </ul>
-    </div>
-
-    <div class="footer-col">
-      <h4 class="footer-title">Redes</h4>
-      <div class="footer-social">
-  <a aria-label="Instagram" href="https://instagram.com/">
-    <svg viewBox="0 0 24 24" aria-hidden="true">
-      <path d="M7 2h10a5 5 0 0 1 5 5v10a5 5 0 0 1-5 5H7a5 5 0 0 1-5-5V7a5 5 0 0 1 5-5Zm5 5a5 5 0 1 0 0 10 5 5 0 0 0 0-10Zm6.5-.9a1.1 1.1 0 1 0 0 2.2 1.1 1.1 0 0 0 0-2.2Z"/>
-    </svg>
-  </a>
-  <a aria-label="WhatsApp" href="https://wa.me/541151022954">
-    <svg viewBox="0 0 24 24" aria-hidden="true">
-      <path d="M20.5 3.5A10 10 0 0 0 3.6 20l-1.1 4 4.1-1.1a10 10 0 0 0 13.8-13.9Zm-8.5 15.6a8.1 8.1 0 0 1-4.1-1.1l-.3-.1-2.4.6.6-2.4-.1-.3a8.1 8.1 0 1 1 6.3 3.3Zm4.7-5.9c-.3-.2-1.7-.9-2-.9s-.5 0-.7.3-.8 1-.9 1.1-.3.2-.6.1a6.7 6.7 0 0 1-2-1.3 7.3 7.3 0 0 1-1.3-1.9c-.1-.3 0-.4.1-.6l.3-.4.4-.5.2-.3c.1-.2 0-.4 0-.5l-.7-1.8c-.2-.5-.4-.4-.6-.4h-.5c-.2 0-.5.1-.7.3s-1 1-1 2.4 1 2.7 1.1 2.9a9.6 9.6 0 0 0 3.5 3.3c.5.2 1.1.4 1.8.6.8.2 1.4.2 1.9.1.6-.1 1.7-.7 1.9-1.3.3-.6.3-1.2.2-1.3Z"/>
-    </svg>
-  </a>
-  <a aria-label="Facebook" href="https://facebook.com/">
-    <svg viewBox="0 0 24 24" aria-hidden="true">
-      <path d="M13 22v-9h3l.5-4H13V7.2c0-1.2.4-2 2.1-2H17V1.5c-1-.1-2.3-.1-3.3-.1-2.5 0-4.2 1.5-4.2 4.4V9H7v4h3v9Z"/>
-    </svg>
-  </a>
-</div>
-
-    </div>
-  </div>
-
-  <div class="footer-bottom">
-    <div class="container">
-      © 2025 Barretodo. Todos los derechos reservados.
-    </div>
   </div>
 </footer>
 
