--- a/web/index.html
+++ b/web/index.html
@@ -79,6 +79,7 @@
   </section>
 
 <section class="benefits-section">
+	<h2 class="section-title">CONTAMOS CON MÁS DE 250 PRODUCTOS DE LIMPIEZA E HIGIENE</h2>
   <div class="container benefits">
     <div class="benefit">
       <span class="icon-badge">🚚</span>
@@ -103,7 +104,7 @@
 
 
   <section class="rubros container">
-    <h2 class="section-title">Nuestros productos</h2>
+    <h2 class="section-title">CONTAMOS CON MÁS DE 250 PRODUCTOS DE LIMPIEZA E HIGIENE</h2>
     <div class="grid">
       <article class="card">
         <img src="assets/img/concentrados.jpg" alt="Concentrados" class="card-img" loading="lazy">
