--- a/web/index.html
+++ b/web/index.html
@@ -311,13 +311,14 @@
 
     <div class="footer-main">
       <!-- Col 1: Marca + descripción -->
-      <div class="f-col f-brand">
-        <img src="assets/img/logo.png" alt="Barretodo" class="f-logo">
-        <p class="f-desc">
-          Distribuidora mayorista y minorista de productos de limpieza en CABA.
-          Te ayudamos a elegir lo más rendidor.
-        </p>
-      </div>
+<div class="footer-brand">
+  <img src="assets/img/logo.png" alt="Barretodo">
+  <p>
+    Distribuidora mayorista y minorista de productos de limpieza en CABA.
+    Te ayudamos a elegir lo más rendidor.
+  </p>
+</div>
+
 
       <span class="f-divider" aria-hidden="true"></span>
 
